--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "image-response-express-node",
   "version": "1.0.0",
   "description": "Returns an image on accessing the / URL",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+	"start": "node server.js"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Banee Ishaque K",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
