--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Returns an image on accessing the / URL",
   "main": "server.js",
   "scripts": {
-	"start": "node server.js"
+	"start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Banee Ishaque K",
